--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 git+https://github.com/fastforwardlabs/cmlbootstrap#egg=cmlbootstrap
-dill==0.3.1.1
-lime==0.1.1.36 
-scikit-learn==1.0.2
-xlrd==1.2.0
-pandas==1.1.5
-numpy==1.19.5
-flask==1.1.4
-tqdm==4.62.3
-seaborn==0.11.2
-markupsafe==2.0.1
+dill
+lime
+scikit-learn
+xlrd
+pandas
+numpy
+flask
+tqdm
+seaborn
+markupsafe
+cml
+typing-extensions==4.1.1
+pytz-deprecation-shim
+rpy2
 -e .
